# anthropomorphic-ai-core

./: .env.example  .gitignore  Dockerfile  Dockerfile.render  LICENSE  LICENSE (MIT License)  README.md  compatibility.md  comprehensive_project_report_fixed.json  database_test_report.json  pyproject.toml  render.yaml  requirements-compatible.txt  requirements.txt  run.py
ai-personality-project/: README.md  app.py  deploy.sh  hf_app.py  main.py  render.yaml  requirements.txt  requirements_hf.txt
ai-service/: app.py  requirements.txt
api/: __init__.py  app.py  dependencies.py  middleware.py  models.py  openapi.py  routes.py
core/: __init__.py  config.py  exceptions.py  main.py  orchestrator.py  state_manager.py
database/: __init__.py  crud.py  models.py  session.py
docs/: architecture.md
modules/: __init__.py
notebooks/: colab_training.ipynb
scripts/: check_compatibility-3.0.py  check_environment-2.0.py  comprehensive_project_test-10.0.py  comprehensive_project_test-5.0.py  comprehensive_project_test-6.0.py  comprehensive_project_test-7.0.py  comprehensive_project_test-8.0.py  comprehensive_project_test-9.0.py  comprehensive_project_test_final.py  comprehensive_stage1_test.py  comprehensive_stage1_test_fixed.py  create_render_db.py  debug_database_metadata.py  deploy_check.py  deploy_render.sh  diagnose_endpoints-2.0.py  diagnose_endpoints-3.0.py  diagnose_endpoints.py  fix_api_endpoints.py  fix_app_integration.py  health_check.py  init_database.py  run_comprehensive_tests-2.0.py  run_comprehensive_tests.py  setup_paths.py  setup_render.py  (+3 more)
(+83 files in other folders)
