[build-system]
requires = ["setuptools>=45.0", "wheel"]
build-backend = "setwtools.build_meta"

[project]
name = "anthropomorphic-ai-core"
version = "0.1.0"
description = "Distributed anthropomorphic AI model system"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "pydantic",
    "transformers",
    "torch",
    "gradio",
    "requests",
    "python-dotenv",
    "pytest"
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio",
    "httpx",
    "black",
    "flake8"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]